tests/baselines/reference/functionOverloads32.errors.txt
functionOverloads32.ts(4,29): error TS2454: Variable 'baz' is used before being assigned.


==== functionOverloads32.ts (1 errors) ====
    function foo(bar:string):string;
    function foo(bar:number):number;
    function foo(bar:any):any{ return bar }
    var baz:number; var x = foo(baz);
                                ~~~
!!! error TS2454: Variable 'baz' is used before being assigned.
    